--- a/index.html
+++ b/index.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Homework Week 6</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+
+    <!-- Custom styles for this template -->
+    <link href="assets/css/style.css" rel="stylesheet">
+
 </head>
+
 <body>
+
+    <div class="container">
+        <header class="blog-header py-3">
+            <div class="row flex-nowrap justify-content-between align-items-center">
+                <div class="col-4 pt-1">
+                    <a class="text-muted" href="#">Homework Week 6</a>
+                </div>
+                <div class="col-4 text-center">
+                    <a class="blog-header-logo text-dark" href="#">GifTastic</a>
+                </div>
+                <div class="col-4 d-flex justify-content-end align-items-center">
+                    <a class="text-muted" href="#">Made Using GiphyAPI</a>
+                </div>
+            </div>
+        </header>
+
+        <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
+            <div class="col-md-9 px-0">
+                <h1 class="display-4 font-italic">Giphy This!</h1>
+            </div>
+        </div>
     
+
+
+
+    <div class="container">
+        <!-- this row will contain all the gif buttons -->
+        <div class="row" id="row1">
+            <div class="col-md-12" id=gifButtonLibrary></div>
+        </div>
+        <!-- this row will display the gifs + have input feild for new buttons -->
+        <div class="row" id="row2">
+            <div class="col-md-3 col-sm-12" id=gifInput>
+                <form>
+                    <div class="form-group" id="inputForm">
+                        <label for="newGifButtons">Add New Gifs</label>
+                        <input type="text" class="form-control" id="newGifButtons" placeholder="">
+                    </div>
+                    <button type="submit" class="btn btn-default" id="gifSubmit">Submit</button>
+                </form>
+            </div>
+            <div class="col-md-9 col-sm-12" id=gifDisplay>
+                <hr>
+            </div>
+        </div>
+
+    </div>
+    
+
+
+    <!-- footer -->
+    <div class="row text-center col-md-12" id="footer"><center>
+        <p>Copyright 2018, by <a href="https://gbanares.github.io/gbanares/">@gb</a></p></center>
+    </div>
+</div>
+    <!-- Javascript -->
+    <script src="assets/javascript/app.js"></script>
+
 </body>
+
 </html>
